XWIKI-12902: Exception message parameters are not passed in exceptioninline.vm
(cherry picked from commit 6ba07cbc4e594e1e0366ed148055f30c6b8ae388)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/exceptioninline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/exceptioninline.vm
@@ -1,6 +1,6 @@
 #set($message = $xcontext.message)
 #if($message)
-  #xwikimessageboxstart($services.localization.render('notice') $services.localization.render($message))
+  #xwikimessageboxstart($services.localization.render('notice') $services.localization.render($message, $xcontext.messageParameters))
   #xwikimessageboxend()
 #else
   #xwikimessageboxstart($services.localization.render('notice') $services.localization.render('problemoccured'))
