XWIKI-12902: Exception message parameters are not passed in exceptioninline.vm

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/exceptioninline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/exceptioninline.vm
@@ -3,7 +3,7 @@
 #end
 #set($message = $xcontext.message)
 #if($message)
-  #xwikimessageboxstart($services.localization.render('notice') $services.localization.render($message))
+  #xwikimessageboxstart($services.localization.render('notice') $services.localization.render($message, $xcontext.messageParameters))
   #xwikimessageboxend()
 #else
   #xwikimessageboxstart($services.localization.render('notice') $services.localization.render('problemoccured'))
