XWIKI-3622: Add an automatic redirect when renaming a document * Add an option to the Rename Page UI to create an automatic redirect * Introduce XWiki.RedirectClass to store the redirect on the page that has been renamed or moved. * Refactor the refactoring module to be able to write unit tests more easily. * Add more unit tests.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/renameStep1.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/renameStep1.vm
@@ -38,6 +38,13 @@
           'label': 'core.rename.links.label',
           'hint': 'core.rename.links.hint'
         })
+        <dt>
+          <label>
+            <input type="checkbox" name="autoRedirect" value="true" checked="checked" />
+            $services.localization.render('core.rename.autoRedirect.label')
+          </label>
+          <span class="xHint">$services.localization.render('core.rename.autoRedirect.hint')</span>
+        </dt>
       </dl>
     </div>
     <div class="col-xs-12 col-lg-6">
