--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/shortcuts.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/shortcuts.vm
@@ -6,11 +6,15 @@
 #if (!$docextralinks && !$docextras)
   #set($docextralinks = [])
   ## Children
-  #if ($doc.name == 'WebHome')
-    #set ($discard = $docextralinks.add(['children', $services.localization.render('docextra.children'), -1, 'folder-open']))
+  #if ($services.parentchild.isParentChildMechanismEnabled())
+    #set ($discard = $docextralinks.add(['children', $services.localization.render('docextra.children'), -1, 'folder-open', {'hierarchy': 'parentchild'}]))
   #else
-    ## Terminal document
-    #set ($discard = $docextralinks.add(['siblings', $services.localization.render('docextra.siblings'), -1, 'folder-open']))
+    #if ($doc.name == 'WebHome')
+      #set ($discard = $docextralinks.add(['children', $services.localization.render('docextra.children'), -1, 'folder-open']))
+    #else
+      ## Terminal document
+      #set ($discard = $docextralinks.add(['siblings', $services.localization.render('docextra.siblings'), -1, 'folder-open']))
+    #end
   #end
   #if($xcontext.action == 'view' && $viewer != 'content')
     #set ($discard = $docextralinks.add(['content', $services.localization.render('core.links.content'), -1, 'file']))
@@ -46,10 +50,20 @@
   #if ($docextralink.size()>3)
     #set ($glyphIcon = $docextralink.get(3))
   #end
+  #set ($extraParams = '')
+  #if ($docextralink.size() > 4)
+    #set ($extraParams = $docextralink.get(4))
+  #end
   #if ($extraCount > 0)
     #set ($extraText = "$extraText ($extraCount)")
   #end
-  #submenuitem($doc.getURL('view', "viewer=$!{escapetool.url(${extraAnchor})}"), ${escapetool.xml(${extraText})}, '', '', $glyphIcon)
+  #if ("$!extraParams" != '')
+    #set ($discard = $extraParams.put('viewer', $extraAnchor))
+    #set ($url = $doc.getURL('view', $escapetool.url($extraParams)))
+  #else
+    #set ($url = $doc.getURL('view', "viewer=$escapetool.url($extraAnchor)"))
+  #end
+  #submenuitem($url, $escapetool.xml($extraText), '', '', $glyphIcon)
 #end
 
 ###########################################
