--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/informationinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/informationinline.vm
@@ -5,48 +5,36 @@
 <div id="_information">
   <div id="informationleft" class="half column">
     <dl>
-      <dt>$services.localization.render('core.viewers.information.parent')</dt>
-      <dd>
-        ## <input type="text" id="xwikidocparentinput2" name="parent" value="$!tdoc.parent" size="30"/>
-        #if("$!tdoc.parent" != '')
-          #displayDocumentList([$tdoc.parent] false [])
-        #else
-          $services.localization.render('core.viewers.information.noParent')
-        #end
-      </dd>
-      <dt>$services.localization.render('core.viewers.information.children')</dt>
-      <dd>
-        #set($children = $doc.getChildren())
-        #if($children.size() > 0)
-          #displayDocumentList($children true $blacklistedSpaces)
-        #else
-          $services.localization.render('core.viewers.information.noChildren')
-        #end
-      </dd>
-    </dl>
-  </div>## informationleft
-  <div id="informationright" class="half column">
-    <dl>
       #if($tdoc.realLanguage != $doc.realLanguage)
         <dt>$services.localization.render('core.viewers.information.translationCreation', [$tdoc.realLanguage])</dt>
         <dd>$services.localization.render('core.viewers.information.translationCreationData', [$xwiki.getUserName($tdoc.creator), $xwiki.formatDate($tdoc.creationDate)])</dd>
       #end
       #if($isAdvancedUser)
-        #set($pages = $tdoc.includedPages)
-        #if($pages.size() > 0)
-          <dt>$services.localization.render('core.viewers.information.includedPages')</dt>
-          <dd>
-            #displayDocumentList($pages true $blacklistedSpaces)
-          </dd>
-      #end
-      #end
-      #set($blinks = $sorttool.sort($doc.getBacklinks()))
-      #if($blinks.size()>0)
-        <dt>$services.localization.render('core.viewers.information.backlinks')</dt>
+        <dt>$services.localization.render('core.viewers.information.includedPages')</dt>
         <dd>
-          #displayDocumentList($blinks true $blacklistedSpaces)
+          #set($pages = $tdoc.includedPages)
+          #if ($pages.isEmpty())
+            ## We display a "no included pages" message to avoid having a blank information panel when there is nothing
+            $services.localization.render('core.viewers.information.noIncludedPages')
+          #else
+            #displayDocumentList($pages true $blacklistedSpaces)
+          #end
         </dd>
       #end
+    </dl>
+  </div>## informationleft
+  <div id="informationright" class="half column">
+    <dl>
+      <dt>$services.localization.render('core.viewers.information.backlinks')</dt>
+      <dd>
+        #set($blinks = $sorttool.sort($doc.getBacklinks()))
+        #if ($blinks.isEmpty())
+          ## We display a "no backlinks" message to avoid having a blank information panel when there is nothing
+          $services.localization.render('core.viewers.information.noBacklinks')
+        #else
+          #displayDocumentList($blinks true $blacklistedSpaces)
+        #end
+      </dd>
     </dl>
   </div>## informationright
   <div class="clearfloats">&nbsp;</div>
