XWIKI-12916: Language names are badly displayed

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_language.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_language.vm
@@ -31,7 +31,7 @@
 ## Display the pretty name of a language
 ##########################################
 #macro(displayLanguagePrettyName $language)
-#if ($language == '')
+#if ($language != '')
 #set($languageLocale = $services.localization.toLocale($language))$escapetool.xml($stringtool.capitalize($languageLocale.getDisplayName($languageLocale)))
 #else
 $services.localization.render('defaultlanguage')
