XWIKI-12918: The entries live table doesn't load if the application name starts with a whitespace character * The whitespace at the start of the attribute values (e.g. live table id) is lost during HTML cleaing.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -1261,7 +1261,9 @@ ${Msz}Mb##
 #if($xwiki.getCurrentContentSyntaxId() != "xwiki/1.0")
 
 
-{{html}}
+## We don't clean the HTML because we control the markup and because we want to preserve the whitespace characters in the
+## attribute values (e.g. if the live table id contains whitespaces)
+{{html clean="false"}}
 #else {pre} #end
 #end
   ##
