--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/companylogo.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/companylogo.vm
@@ -18,7 +18,7 @@
 #if("$!{logoname}" != '')
   #set($logourl = $themeDoc.getAttachmentURL($logoname))
 #else
-  #set($logoname = $xwiki.getSkinPreference('logo', 'logo.png'))
+  #set($logoname = $xwiki.getSkinPreference('logo', 'logo.svg'))
   #set($logo = $!prefdoc.getAttachment($logoname))
   #if(!$logo)
     #set($logourl = $xwiki.getSkinFile($logoname))
