XWIKI-12922: The flavor picker is broken.
The first line of the resource was a velocity comment. Once reduced by the CSS minifier, the whole file was commented!
This fix updates the comment by using a CSS comment with a start and an end. We could have done the same with a velocity comment,
but it seems more logical to use a CSS comment in a CSS file!

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/flavor/picker.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/flavor/picker.css
@@ -1,4 +1,4 @@
-## TODO: use the xwiki select widget: http://jira.xwiki.org/browse/XWIKI-12503
+/* TODO: use the xwiki select widget: http://jira.xwiki.org/browse/XWIKI-12503 */
 #template('colorThemeInit.vm')
 
 .xwiki-flavor-picker {
