--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/macros.vm
@@ -121,9 +121,8 @@
   #if("$!options.topFilters" != '') #set($topfilters = $options.topFilters) #end
   #if("$options.pageSize" == '' || $!options.pageSize == false) #set($hasPageSize=false) #else #set($hasPageSize = true) #end
   #if("$!options.pageSizeBounds" != '') #set($pageSizeBounds = $options.pageSizeBounds) #end
-  #if("$!options.queryFilters" != '')
-    #set ($queryFilters = $!options.queryFilters)
-  #else
+  #set ($queryFilters = $options.queryFilters)
+  #if (!$queryFilters)
     #set ($queryFilters = 'currentlanguage,hidden')
   #end
   #set($classname = "$!options.className")
