--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -1291,9 +1291,8 @@ ${Msz}Mb##
   #if("$!options.topFilters" != '') #set($topfilters = $options.topFilters) #end
   #if("$options.pageSize" == '' || $!options.pageSize == false) #set($hasPageSize=false) #else #set($hasPageSize = true) #end
   #if("$!options.pageSizeBounds" != '') #set($pageSizeBounds = $options.pageSizeBounds) #end
-  #if("$!options.queryFilters" != '')
-    #set ($queryFilters = $!options.queryFilters)
-  #else
+  #set ($queryFilters = $options.queryFilters)
+  #if (!$queryFilters)
     #set ($queryFilters = 'currentlanguage,hidden')
   #end
   #set($classname = "$!options.className")
