XWIKI-12929: Sorting should be disabled on the Title columns (Document Index + Children/Siblings livetables).
(cherry picked from commit fb7ea4e22eed8e3aa1e45a36126347d1756d214c)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/children.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/children.vm
@@ -43,7 +43,7 @@
     ##
     #set ($collist = ['doc.title', 'doc.location', 'doc.date', 'doc.author', '_actions'])
     #set ($colprops = {
-      'doc.title'    : { 'link' : 'view' },
+      'doc.title'    : { 'link' : 'view', 'sortable': false },
       'doc.author'   : { 'link' : 'author', 'type': 'text', 'filterable': true},
       'doc.location' : { 'type': 'text', 'filterable': true, 'html': true},
       '_actions'     : { 'actions': ['copy', 'rename', 'rights', 'delete'] }
