--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -236,15 +236,15 @@ $xwiki.getUserName("xwiki:${username}")
       #if (!$userReference)
         #set ($userReference = $services.model.resolveDocument($user, 'user/current'))
       #end
-      #set ($userName = ${userReference.name})
+      #set($userReferenceString = $services.model.serialize($userReference, 'default'))
       #getUserAvatarURL($userReference $avatarURL 30)
       <li class="user">
         <div class="user-avatar-wrapper">
           ## The string returned by XWiki#getUserName() is XML encoded.
           <img src="${escapetool.xml($avatarURL.url)}" class="icon"
-            alt="${xwiki.getUserName("XWiki.${userName}", false)}" />
+            alt="${xwiki.getUserName($userReferenceString, false)}" />
         </div>
-        <div class="user-name">${xwiki.getUserName("XWiki.${userName}")}</div>
+        <div class="user-name">${xwiki.getUserName($userReferenceString)}</div>
         <div>
           <span class="user-alias">${escapetool.xml($userReference.name)}</span>
           ## Display the wiki only for local users.
