XWIKI-12943: Remove remaining ambiguity from Locale/language related api.* script APIs

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/commentsinline.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/commentsinline.vm
@@ -27,7 +27,7 @@
 ##
 ## These are used when this page is accessed directly but are useless when the page is pulled in with ajax using 
 ## bin/view/Space/Page?xpage=xpart&vm=commentsinline.vm
-$xwiki.jsfx.use('uicomponents/viewers/comments.js', {'forceSkinAction': true, 'language': ${xcontext.language}})
+$xwiki.jsfx.use('uicomponents/viewers/comments.js', {'forceSkinAction': true, 'language': ${xcontext.locale}})
 $xwiki.ssfx.use('uicomponents/viewers/comments.css', true)
 ##
 ##---------------------------------------------------------------------
