--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/importinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/importinline.vm
@@ -33,7 +33,7 @@
   #set($baseQueryString = "editor=$!{request.editor}&amp;section=$!{request.section}")
   $xwiki.jsfx.use('js/xwiki/importer/import.js', true)##
   $xwiki.ssfx.use('js/xwiki/importer/import.css', true)##
-  $xwiki.jsfx.use('uicomponents/widgets/upload.js', {'forceSkinAction': true, 'language': ${xcontext.language}})##
+  $xwiki.jsfx.use('uicomponents/widgets/upload.js', {'forceSkinAction': true, 'language': ${xcontext.locale}})##
   $xwiki.ssfx.use('uicomponents/widgets/upload.css', true)##
   <div id="import" class="row">
     <div id="packagelist" class="col-xs-12 col-sm-6 col-md-6">
