--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/editwiki.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/editwiki.vm
@@ -24,7 +24,7 @@ $xwiki.getTextArea($tdoc.content)
 </div> ## noname
 <div class="bottombuttons form-inline">#template("editactions.vm")</div>
 ## Insert JS and CSS needed for the fullscreen edit feature
-$xwiki.jsfx.use('uicomponents/widgets/fullScreen.js', {'forceSkinAction': true, 'language': ${xcontext.language}})
+$xwiki.jsfx.use('uicomponents/widgets/fullScreen.js', {'forceSkinAction': true, 'language': ${xcontext.locale}})
 $xwiki.ssfx.use('uicomponents/widgets/fullScreen.css', true)
 ## Autosave feature
 $xwiki.jsfx.use('js/xwiki/editors/autosave.js', true)
