--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/htmlheader.vm
@@ -10,7 +10,7 @@
 #macro(xwikiDataAttribute $name $value)
   data-xwiki-${name}="$escapetool.xml($value)"
 #end
-<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language"
+<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.locale" xml:lang="$xcontext.locale"
   ## NOTE: you should not use these attributes in javascript directly, but via the 'xwiki-meta' module instead:
   ## http://platform.xwiki.org/xwiki/bin/view/DevGuide/JavaScriptAPI#HGetsomeinformationaboutthecurrentdocument
   #xwikiDataAttribute('reference', $services.model.serialize($doc.documentReference, 'default'))
@@ -82,7 +82,7 @@
     ## ---------------------------------------------------------------------------------------------------------------
     ## Localize GWT applications.
     ## ---------------------------------------------------------------------------------------------------------------
-    <meta name="gwt:property" content="locale=$!{xcontext.language}" />
+    <meta name="gwt:property" content="locale=$!{xcontext.locale}" />
     ## ---------------------------------------------------------------------------------------------------------------
     ## Add user-defined Meta directives.
     ## ---------------------------------------------------------------------------------------------------------------
