--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/office.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/office.vm
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="$xwiki.encoding" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.locale" xml:lang="$xcontext.locale">
 <head>
 <title>$escapetool.html($request.attachment)</title>
 <meta http-equiv="Content-Type" content="text/html; charset=$xwiki.encoding" />
