--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/shareinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/shareinline.vm
@@ -40,7 +40,7 @@
         #end ## @
         #if (!$recipients.contains($recipient) && "$!recipient" != '')
           #set ($discard = $recipients.add($recipient))
-          #set ($result = $xwiki.mailsender.sendMessageFromTemplate($sender, $recipient, ${NULL}, ${NULL}, $xcontext.language, 'XWiki.SharePage', {}))
+          #set ($result = $xwiki.mailsender.sendMessageFromTemplate($sender, $recipient, ${NULL}, ${NULL}, "${xcontext.locale}", 'XWiki.SharePage', {}))
           #if ($result != 0)
             #set ($discard = $errors.put($fullRecipientName, $services.localization.render('core.viewers.share.error.serverError')))
           #else
@@ -88,7 +88,7 @@
     ## <dd><label><input type="checkbox" name="includeComments"/> $services.localization.render('core.viewers.share.includeComments')</label></dd>
 
     #set ($message = "<textarea name='message' rows='3' cols='80'>${services.localization.render('core.viewers.share.defaultMessage')}</textarea>")
-    #set ($fullMessage = $xwiki.getDocument('XWiki.SharePage').getObject('XWiki.Mail', 'language', $xcontext.language, true).getProperty('html').value)
+    #set ($fullMessage = $xwiki.getDocument('XWiki.SharePage').getObject('XWiki.Mail', 'language', "${xcontext.locale}", true).getProperty('html').value)
     #set ($fullMessage = $fullMessage.replace('${recipientName}', $services.localization.render('core.viewers.share.recipientPlaceholder')))
     #set ($fullMessage = $fullMessage.replaceAll('<pre[^>]*+>[^<]*+</pre>', $message))
     ## Evaluate the template's content since it contains Velocity code.
