--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/editinline.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/editinline.vm
@@ -70,7 +70,7 @@ $xwiki.ssfx.use('uicomponents/widgets/fullScreen.css', true)##
 ## We need to submit the language of the translated document because the inline edit mode is not limited to editing only
 ## the objects, which are shared by all translations. We can also edit the content or the title of the document which are
 ## specific to each translation and so we need to specify which translation is being edited.
-<input type="hidden" name="language" value="$!{escapetool.xml($tdoc.realLanguage)}" />
+<input type="hidden" name="language" value="$!{escapetool.xml($tdoc.realLocale)}" />
 #if("$!request.parent" != '')
   <input type="hidden" name="parent" value="$escapetool.xml($!request.parent)" />
 #end
