--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/editwiki.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/editwiki.vm
@@ -12,7 +12,7 @@
 #end
 <input type="hidden" name="xcontinue" value="$xcontinue"/>
 <input type="hidden" name="xredirect" value="$!xredirect" />
-<input type="hidden" name="language" value="$!tdoc.realLanguage" />
+<input type="hidden" name="language" value="$!tdoc.realLocale" />
 </div> ## hidden
 <div id="xwikitext">
 <div id="xwikieditcontent">
