--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/changesall.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/changesall.vm
@@ -9,8 +9,8 @@
 #if ($type == '')
   #set($type = 'html')
 #end
-#if ($tdoc.realLanguage != '')
-  #set ($lang = "&amp;language=${tdoc.realLanguage}")
+#if ("$tdoc.realLocale" != '')
+  #set ($lang = "&amp;language=${tdoc.realLocale}")
 #else
   #set($lang = '')
 #end
