XWIKI-12943: Remove remaining ambiguity from Locale/language related api.* script API

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_language.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_language.vm
@@ -2,8 +2,8 @@
 ##        LANGUAGE MENU
 ##################################
 #if ($displayLanguageChoice && $xwiki.isMultiLingual())
-  #set($currentLanguage = "$!{tdoc.realLanguage}")
-  #set($originalLanguage = "$!{doc.realLanguage}")
+  #set($currentLanguage = "$!{tdoc.realLocale}")
+  #set($originalLanguage = "$!{doc.realLocale}")
   #set ($availtrans = $doc.translationList)
   #set ($discard = $availtrans.add($originalLanguage))
   #set ($wikiSettingsLanguages = $!xwiki.getXWikiPreference('languages').trim().split('\s*[,| ]\s*'))
