XWIKI-12952: Fix some HTML5 violations.
* Remove some invalid ARIA attributes.
* Escape '&' characters in HTML URLs in some places.

(cherry picked from commit 76ff57ec6a6fca48bc5f3f563f575b41efce0114)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/drawer.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/drawer.vm
@@ -3,7 +3,7 @@
 ## Display the drawer
 ##
 <div class="drawer-main drawer-default" id="tmDrawer">
-  <nav class="drawer-nav" role="navigation">
+  <nav class="drawer-nav">
   
     ##
     ## Drawer header (with elements concerning the current user: profile, login, logout, register, etc...)
