--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-tree/xwiki-platform-index-tree-war/src/main/webapp/templates/documentTree_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-tree/xwiki-platform-index-tree-war/src/main/webapp/templates/documentTree_macros.vm
@@ -45,7 +45,7 @@
       #set ($discard = $resourceParams.put($entry.key, $value))
     #end
   #end
-  #set ($macro.options.reference = "path:$xwiki.getURL('XWiki.DocumentTree', 'get', $escapetool.url($resourceParams))")
+  #set ($macro.options.reference = "path:$xwiki.getURL('XWiki.DocumentTree', 'get', $escapetool.html($escapetool.url($resourceParams)))")
   #set ($editable = $macro.options.remove('readOnly') != 'true')
   #set ($macro.options.dragAndDrop = $editable)
   #set ($macro.options.contextMenu = $editable)
