XWIKI-12952: Fix some HTML5 violations.
* Missing <dd> tags

(cherry picked from commit ed1cb30c6272ff94d868ae8765a55097ec522893)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/rightsUI.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/rightsUI.vm
@@ -184,6 +184,7 @@ $xwiki.ssfx.use('js/xwiki/table/livetable.css', true)
             <input type="image" id="authenticate_view" alt="$view_alt" src="$view_icon" class="icon" />
             $services.localization.render('authenticate_view')
           </label>
+          <dd>#* A <dd> must be present after a <dt> to be HTML5 valid *#</dd>
         </dt>
         #set ($auth_edit = $targetDocument.getObject('XWiki.XWikiPreferences').getProperty('authenticate_edit').getValue())
         #if ("$!auth_edit" == '1')
@@ -198,6 +199,7 @@ $xwiki.ssfx.use('js/xwiki/table/livetable.css', true)
             <input type="image" id="authenticate_edit" alt="$edit_alt" src="$edit_icon" class="icon" />
             $services.localization.render('authenticate_edit')
           </label>
+          <dd>#* A <dd> must be present after a <dt> to be HTML5 valid *#</dd>
         </dt>
       #end
       #if ($guest_comment_captcha_prop)
@@ -221,6 +223,7 @@ $xwiki.ssfx.use('js/xwiki/table/livetable.css', true)
             $services.localization.render('rightsmanager.guestcommentrequirescaptcha')
           </label>
         </dt>
+        <dd>#* A <dd> must be present after a <dt> to be HTML5 valid *#</dd>
       #end
     </dl>
   #end
