XWIKI-12952: Fix some HTML5 violations.
(cherry picked from commit c11e54d0b5cb20d7d225560d23ae9b2f180151c1)

Conflicts:
	xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/historyinline.vm

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/importinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/importinline.vm
@@ -50,7 +50,7 @@
             <div><input id="xwikiuploadname" type="hidden" name="filename" value="" size="30"/></div>
             <div class="package-upload">
                <label for="xwikiuploadfile" class="hidden">$services.localization.render('core.viewers.attachments.upload.file')</label>
-               <input id="xwikiuploadfile" type="file" name="filepath" value="" size="30" class="uploadFileInput"/>
+               <input id="xwikiuploadfile" type="file" name="filepath" size="30" class="uploadFileInput"/>
                <span class="buttonwrapper">
                  <input type="submit" value="Upload" class="button" />
                </span>
