--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
@@ -126,7 +126,7 @@
       #set ($breadCrumbParameters = "$breadCrumbParameters data-${option.toLowerCase()}='$escapetool.xml($options.get($option))'")
     #end
   #end
-  <ol id="$!options.id" class="$breadCrumbClassNames" $breadCrumbParameters><li
+  <ol #if("$!options.id" != '')id="$options.id"#end class="$breadCrumbClassNames" $breadCrumbParameters><li
     #foreach ($item in $pathData)
       #set ($classNames = $collectionstool.set)
       #set ($discard = $classNames.add($item.reference.type.toString().toLowerCase()))
