XWIKI-12761: Hide the advanced create/rename/move/delete option for simple users.
* Only done on the create action for now.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -214,6 +214,7 @@
 
       ## Display the location picker.
       <div class='col-xs-12 col-lg-6'>
+        #set ($isNotAdvancedUser = !$isAdvancedUser)
         #template('locationPicker_macros.vm')
         #locationPicker({
           'id': 'target',
@@ -241,7 +242,8 @@
             'name': 'name',
             'value': $name,
             'placeholder': 'core.create.name.placeholder'
-          }
+          },
+          'disableAdvancedEditing' : $isNotAdvancedUser
         })
       </div>
     #else
